--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,37 @@
-/*
---------TYPOGRAPHY-------
-Note: change the values to match with design
-
-FONTS SIZES:
-12 px / 16px / 20px /
-24px/ 32px / 40px / 48px / 62px
-
-FONT WEIGHTS
-400 / 700
-
-LINE HEIGHTS
-1.2 / 1.5
-
-LETTER SPACING
-0/ -2px
-
-FONT FAMILY
-Poppins
-
---------COlORS-------
-PRIMARY
-Base: #339af0 (Sky Blue)
-Tint: #d0ebff (Arctic)
-Shade: #17ed6 (Deep Sea)
-
-SECONDARY
-Base: #9775fa (Lavendar)
-Tint: #e5dbff (Moonligh Iris)
-Shade: #7048e8 (Velvet Night)
-
-TERTIARY
-Base: #ff922b (Pumpkin)
-Tint: #ffe8cc (Dawn)
-Shade: #f76707 (Lava)
-
-GREY
-Base: #495057 (Slate)
-Tint: #f1f3f5 (Pebble)
-Shade: #212529 (Graphite)
-White: #ffffff (White)
-Black: #000000 (Black)
-
---------BORDER RADIUS-------
-4px/ 8px/ 20px
-
---------SPACING SYSTEM-------
-
-5px / 10px / 15px / 20px / 30px /40px/ 50px/ 60px/ 70px/ 80px/ 90/px/ 100px
- */
-
 /*--------GLOBAL STYLES-------*/
 
 :root {
-  /* TODO: change this value based on design*/
   /*FONT SIZE*/
-  --text-sm: 1.2rem;
-  --text-base: 1.6rem;
-  --text-paragraph: 2.0rem;
-  --text-h5: 2.4rem;
-  --text-h4: 3.2rem;
-  --text-h3: 4.0rem;
-  --text-h2: 4.8rem;
-  --text-h1: 6.2rem;
+  --text-small: 1.4rem;
+  --text-paragraph: 1.6rem;
+  --text-nav-item: 1.8rem;
+  --text-icon: 2.2rem;
+  --text-h1: 4.8rem;
 
   /*FONT WEIGHT*/
-  /* TODO: change this value based on design*/
   --font-weight-normal: 400;
   --font-weight-bold: 700;
 
   /*LINE HEIGHT*/
-  /* TODO: change this value based on design*/
-  --line-height-tight: 1.2;
-  --line-height-normal: 1.5;
+  --line-height-tight: 1.5;
+  --line-height-normal: 1.6;
+  --line-height-bold: 2.6;
 
   /*LETTER SPACING*/
-  /* TODO: change this value based on design*/
   --letter-spacing-tight: -2px;
 
   /*FONT FAMILY*/
-  /* TODO: change this value based on design*/
-  --font-family: "Poppins", sans-serif;
+  --font-family: "Mulish", "Open Sans", sans-serif;
 
   /*COLORS */
-  /* TODO: change this value based on design*/
-  --primary-base: #339af0;
-  --primary-tint: #d0ebff;
-  --primary-shade: #1c7ed6;
-  --secondary-base: #9775fa;
-  --secondary-tint: #e5dbff;
-  --secondary-shade: #7048e8;
-  --tertiary-base: #ff922b;
-  --tertiary-tint: #ffe8cc;
-  --tertiary-shade: #f76707;
-  --grey-base: #495057;
-  --grey-tint: #f1f3f5;
-  --grey-shade: #212529;
-  --white: #ffffff;
-  --black: #000000;
+  --primary-base: #69B99D; /*màu chủ đạo*/
+  --primary-tint: #89C5CC;
+  --secondary-base: #1F1534;
+  --grey-base: #7d7987;
+  --white: #fefefe;
+  --black: #202020;
 
-  /*Miscellaneous*/
-  --nav-height: 100px; /* TODO: change this value based on design*/
+  --nav-height: 100px;
 }
 
 * {
@@ -109,7 +41,7 @@ Black: #000000 (Black)
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; /* 10/16 * 100% = 62.5% */
 }
 
 body {
@@ -120,50 +52,29 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1040px;
   width: 90%;
   margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5 {
+h1 {
   font-weight: var(--font-weight-normal);
   line-height: var(--line-height-tight);
   letter-spacing: var(--letter-spacing-tight);
-  color: var(--grey-shade);
+  color: var(--black);
 }
 
 h1 {
   font-size: var(--text-h1);
 }
 
-h2 {
-  font-size: var(--text-h2);
-}
-
-h3 {
-  font-size: var(--text-h3);
-}
-
-h4 {
-  font-size: var(--text-h4);
-}
-
-h5 {
-  font-size: var(--text-h5);
-}
-
-p, a, .small-text {
+p, a {
   font-weight: var(--font-weight-normal);
   line-height: var(--line-height-normal);
   color: var(--grey-base);
 }
 
-p {
-  font-size: var(--text-paragraph);
-}
-
 a {
-  font-size: var(--text-base);
   text-decoration: none;
   display: inline-block;
 }
@@ -176,14 +87,13 @@ span {
   display: inline-block;
 }
 
-
 /*-------COMPONENTS-------*/
 /*Buttons*/
 .btn {
-  font-size: var(--text-base);
+  font-size: var(--text-paragraph);
   text-decoration: none;
-  padding: 1.5rem 3.0rem;
-  border-radius: 8px;
+  padding: 1.4rem 3.2rem 1.5rem 3.2rem;
+  border-radius: 4px;
 }
 
 .btn-primary:link, .btn-primary:visited {
@@ -194,32 +104,8 @@ span {
 
 .btn-primary:hover, .btn-primary:active {
   color: var(--white);
-  background-color: var(--primary-shade);
-  border: 2px solid var(--primary-shade);
-}
-
-.btn-primary-outline:link, .btn-primary-outline:visited {
-  color: var(--primary-base);
-  background-color: var(--white);
-  border: 2px solid var(--primary-base);
-}
-
-.btn-primary-outline:hover, .btn-primary-outline:active {
-  background-color: var(--white);
-  color: var(--primary-shade);
-  border: 2px solid var(--primary-shade);
-}
-
-.btn-secondary:link, .btn-secondary:visited {
-  color: var(--white);
-  background-color: var(--secondary-shade);
-  border: 2px solid var(--secondary-shade);
-}
-
-.btn-secondary:hover, .btn-secondary:active {
-  color: var(--white);
-  background-color: var(--secondary-shade);
-  border: 2px solid var(--secondary-shade);
+  background-color: var(--primary-tint);
+  border: 2px solid var(--primary-tint);
 }
 
 /*------SECTIONS-------*/
@@ -230,5 +116,103 @@ span {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  width: 1140px;
 }
 
+.icon {
+  color: var(--primary-tint);
+  font-family: var(--font-family), sans-serif;
+  font-size: var(--text-icon);
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-bold);
+}
+
+.nav-button-container {
+  display: flex;
+  gap: 4.8rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-item {
+  color: var(--secondary-base);
+  font-size: var(--text-nav-item);
+  font-weight: var(--font-weight-normal);
+}
+
+.hightlight {
+  font-weight: var(--font-weight-bold);
+}
+
+/*----- HERO SECTION-----*/
+.hero-section {
+  display: flex;
+  gap: 4.8rem;
+  height: calc(100vh - var(--nav-height));
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+}
+.left {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-heading {
+  color: var(--black);
+  font-family: var(--font-family), sans-serif;
+  font-size: var(--text-h1);
+  font-weight: var(--font-weight-normal);
+  line-height: 150%;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+}
+
+.hero-heading__hightlight {
+  color: var(--primary-tint);
+  font-weight: var(--font-weight-bold);
+}
+
+.hero-paragraph {
+  color: var(--grey-base);
+  font-size: var(--text-paragraph);
+  line-height: 160%;
+  margin-bottom: 4.8rem;
+}
+
+.hero-image {
+  width: 520px;
+}
+
+.hero-buttons{
+  display: flex;
+  align-items: center;
+}
+
+.footer{
+  color: #000;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 22.4px */
+  position: absolute;
+  top: calc(70vh + 48px);
+  left: calc(50vw);
+}
+
+.footer__hightlight {
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+}
